<resources>

    <string name="app_name">UF1-1-A15-ListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">UF1-1-A15 ListView</string>
    <string name="txt_temporal">Text de proves</string>

    <!-- MainActivity -->
    <string name="titulo_agenda">Agenda de Contactos</string>
    <string name="btn_agregar">+ Añadir</string>
    <string name="btn_borrar">Borrar</string>

    <!-- ContactoActivity -->
    <string name="titulo_detalles">Detalles del Contacto</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_apellido">Apellido:</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="label_email">Email:</string>
    <string name="label_direccion">Dirección:</string>
    <string name="label_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="label_notas">Notas:</string>

    <string name="hint_nombre">Introduce el nombre</string>
    <string name="hint_apellido">Introduce el apellido</string>
    <string name="hint_telefono">Introduce el teléfono</string>
    <string name="hint_email">Introduce el email</string>
    <string name="hint_direccion">Introduce la dirección</string>
    <string name="hint_fecha">dd/mm/aaaa</string>
    <string name="hint_notas">Introduce notas adicionales</string>

    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_eliminar">Eliminar</string>

    <!-- Mensajes -->
    <string name="msg_nombre_obligatorio">El nombre es obligatorio</string>
    <string name="msg_contacto_agregado">Contacto añadido</string>
    <string name="msg_contacto_actualizado">Contacto actualizado</string>
    <string name="msg_contacto_borrado">Contacto eliminado</string>
    <string name="msg_email_vacio">Email vacío</string>
    <string name="msg_telefono_vacio">Teléfono vacío</string>

    <!-- Diálogos -->
    <string name="dialog_titulo_eliminar">Confirmar eliminación</string>
    <string name="dialog_mensaje_eliminar">¿Estás seguro de que deseas eliminar este contacto?</string>

</resources>

