<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/titulo_detalles"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_nombre"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_apellido"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellido"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_telefono"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:inputType="phone" />

        <ImageView
            android:id="@+id/imgTelefono"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/telefono" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_direccion"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_fecha_nacimiento"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fecha"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_notas"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/hint_notas"
            android:inputType="textMultiLine"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn_guardar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn_cancelar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="#D32F2F"
                android:text="@string/btn_eliminar"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

